<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.mexicanquiz.WrittenAnswerActivity">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@drawable/questiongradient">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/smallwhowants"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                tools:text="@string/question3_question"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@android:color/white"
                android:layout_alignParentBottom="true"
                android:shadowRadius="10"
                android:textColor="@android:color/background_dark"
                android:gravity="center"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/true_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/question3_true"
                android:layout_marginTop="46dp"
                android:textSize="25sp"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/false_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/question3_false"
                android:layout_marginTop="16dp"
                android:textSize="25sp"
                android:layout_marginBottom="20dp"/>


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/text3of10"
                android:textSize="15sp" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/nextTextButton"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:background="@drawable/buttonstyle"
                style="@style/Widget.AppCompat.ImageButton"/>

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/determinateBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="0"
            android:progress="@string/progressBarValue3"
            android:progressBackgroundTint="@color/colorProgressBackgroundTint"
            android:progressTint="@color/colorProgressTint" />


    </LinearLayout>
</ScrollView>