<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.yosola.android.mexicanquiz.WrittenAnswerActivity">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@drawable/questiongradient">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/smallwhowants"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                tools:text="@string/question2_question"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@android:color/white"
                android:layout_alignParentBottom="true"
                android:shadowRadius="10"
                android:textColor="@android:color/background_dark"
                android:gravity="center"/>

        </RelativeLayout>


        <EditText
            android:id="@+id/user_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            android:maxLength="45"
            android:hint="@string/question2_hint"
            android:inputType="textCapWords"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">


            <TextView
                android:id="@+id/currentquestion_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                tools:text="@string/text2of10"
                android:textSize="15sp" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/nextTextButton"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:background="@drawable/buttonstyle"
                style="@style/Widget.AppCompat.ImageButton"/>

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/determinateBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="0"
            android:progressBackgroundTint="@color/colorProgressBackgroundTint"
            android:progressTint="@color/colorProgressTint" />


    </LinearLayout>
</ScrollView>